# dissertation

./: .gitignore  Cargo.toml  README.md  TODO.md  proposal.typ
benches/: bnb.rs
diss/: diss.typ  ieee-et-al-min.csl  references.yml
diss/benches/: cplex.csv
diss/benches/furini/deice-decomposed/10/base/: estimates.json  sample.json
diss/benches/furini/deice-decomposed/11/base/: estimates.json  sample.json
diss/benches/furini/deice-decomposed/12/base/: estimates.json  sample.json
diss/benches/furini/deice-decomposed/2/base/: estimates.json  sample.json
diss/benches/furini/deice-decomposed/3/base/: estimates.json  sample.json
diss/benches/furini/deice-decomposed/4/base/: estimates.json  sample.json
diss/benches/furini/deice-decomposed/5/base/: estimates.json  sample.json
diss/benches/furini/deice-decomposed/6/base/: estimates.json  sample.json
diss/benches/furini/deice-decomposed/7/base/: estimates.json  sample.json
diss/benches/furini/deice-decomposed/8/base/: estimates.json  sample.json
diss/benches/furini/deice-decomposed/9/base/: estimates.json  sample.json
diss/benches/furini/deice-integrated/1/base/: estimates.json  sample.json
diss/benches/furini/deice-integrated/10/base/: estimates.json  sample.json
diss/benches/furini/deice-integrated/11/base/: estimates.json  sample.json
diss/benches/furini/deice-integrated/12/base/: estimates.json  sample.json
diss/benches/furini/deice-integrated/2/base/: estimates.json  sample.json
diss/benches/furini/deice-integrated/3/base/: estimates.json  sample.json
diss/benches/furini/deice-integrated/4/base/: estimates.json  sample.json
diss/benches/furini/deice-integrated/5/base/: estimates.json  sample.json
diss/benches/furini/deice-integrated/6/base/: estimates.json  sample.json
diss/benches/furini/deice-integrated/7/base/: estimates.json  sample.json
diss/benches/furini/deice-integrated/8/base/: estimates.json  sample.json
diss/benches/furini/deice-integrated/9/base/: estimates.json  sample.json
diss/benches/heathrow/deice-ctot/1/base/: estimates.json  sample.json
diss/benches/heathrow/deice-ctot/10/base/: estimates.json  sample.json
diss/benches/heathrow/deice-ctot/11/base/: estimates.json  sample.json
diss/benches/heathrow/deice-ctot/12/base/: estimates.json  sample.json
diss/benches/heathrow/deice-ctot/13/base/: estimates.json  sample.json
diss/benches/heathrow/deice-ctot/14/base/: estimates.json  sample.json
diss/benches/heathrow/deice-ctot/15/base/: estimates.json  sample.json
diss/benches/heathrow/deice-ctot/16/base/: estimates.json  sample.json
diss/benches/heathrow/deice-ctot/17/base/: estimates.json  sample.json
diss/benches/heathrow/deice-ctot/18/base/: estimates.json  sample.json
diss/benches/heathrow/deice-ctot/19/base/: estimates.json  sample.json
diss/benches/heathrow/deice-ctot/2/base/: estimates.json  sample.json
diss/benches/heathrow/deice-ctot/20/base/: estimates.json  sample.json
diss/benches/heathrow/deice-ctot/26/base/: estimates.json  sample.json
diss/results/: branch-bound-ctot-heathrow-small-medium.csv  branch-bound-ctot-heathrow-subsets.csv  branch-bound-integrated-furini.csv  branch-bound-integrated-heathrow-small.csv  branch-bound-tobt-furini-full.csv  furini-subset-results.csv  heathrow-instances-large.csv  heathrow-instances-medium.csv  heathrow-instances-small.csv  heathrow-instances.csv
diss/results/furini/branch-bound/: deice-decomposed.csv  deice-integrated.csv
diss/results/heathrow/: instances-large.csv  instances-medium.csv  instances-small.csv
diss/results/heathrow/branch-bound/: deice-ctot.csv  deice-integrated.csv  deice-tobt.csv
diss/results/heathrow/cplex/: deice-integrated.csv
interim/: ieee-et-al-min.csl  interim.typ  references.yml  self-assessment.xlsx
irdis/: Cargo.toml
irdis/benches/: branch_bound.rs  parse.rs  solve.rs  visualise.rs
irdis/examples/: branch_bound.rs  convert_furini.rs  convert_heathrow.rs  from_furini.rs  generate_furini.rs  generate_heathrow.rs  rolling_horizon.rs  visualise_cplex.rs
irdis/irdis-branch-bound/: Cargo.toml
irdis/irdis-branch-bound/benches/: modified_furini.rs
irdis/irdis-branch-bound/src/: bound.rs  complete_orders.rs  cost.rs  decomposed.rs  explore.rs  integrated.rs  lib.rs  mode.rs  node.rs  schedule.rs  search.rs  sequential.rs
irdis/irdis-branch-bound/src/mode/: integrated.rs  sequential.rs
irdis/irdis-core/: Cargo.toml
irdis/irdis-core/src/: instance.rs  lib.rs  solve.rs
irdis/irdis-core/src/instance/: aircraft.rs  duration.rs  op.rs  row.rs  schedule.rs  separation.rs
irdis/irdis-cplex/: .oplproject  .project  irdis.mod  redo.mod  test.mod
irdis/irdis-data/: Cargo.toml
irdis/irdis-data/src/: furini.rs  heathrow.rs  lib.rs  xlsx.rs
irdis/irdis-data/src/heathrow/: runway.rs  sep.rs  taxi.rs
irdis/irdis-instance/: Cargo.toml
irdis/irdis-instance/src/: convert.rs  flight.rs  lib.rs  schedule.rs  sep.rs  time.rs
irdis/irdis-instance/src/convert/: furini.rs  xlsx.rs
irdis/irdis-instance/src/time/: duration.rs
irdis/irdis-vis/: Cargo.toml
irdis/irdis-vis/src/: lib.rs
irdis/src/: lib.rs
proposal/: dmp.docx  proposal.typ  references.yml
runseq/: Cargo.toml
runseq/benches/: branch_bound.rs
runseq/examples/: branch_bound_furini.rs  branch_bound_heathrow.rs  generate_furini.rs  generate_heathrow.rs  visualise_cplex.rs
runseq/runseq-branch-bound/: Cargo.toml
runseq/runseq-branch-bound/src/: complete_orders.rs  cost.rs  decomposed.rs  integrated.rs  lib.rs  search.rs
runseq/runseq-cplex/: runseq.mod  test.mod
runseq/runseq-data/: Cargo.toml
runseq/runseq-data/src/: furini.rs  heathrow.rs  lib.rs  xlsx.rs
runseq/runseq-data/src/heathrow/: flight.rs  sep.rs
runseq/runseq-instance/: Cargo.toml
runseq/runseq-instance/src/: flight.rs  lib.rs  schedule.rs  sep.rs  solve.rs
runseq/runseq-vis/: Cargo.toml
runseq/runseq-vis/src/: lib.rs
runseq/src/: lib.rs
src/: bnb.rs  departure.rs  instance.rs  lib.rs  main.rs  visual.rs
src/instance/: aircraft.rs  constraints.rs  duration.rs  op.rs  separation.rs
(+132 files in other folders)
