[package]
name = "dissertation"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = [
    "std",
    "serde",
] }
csv = "1.3.0"
rand = { version = "0.8.5" }
serde = { version = "1.0.192", features = ["derive"] }
serde_with = "3.4.0"
svg = { version = "0.14.0", optional = true }
thiserror = "1.0.50"

[dev-dependencies]
divan = "0.1.5"

[features]
default = ["visualise"]
visualise = ["dep:svg"]

[[bench]]
name = "bnb"
harness = false
