[package]
name = "irdis"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg", "docsrs"]

[dependencies]
irdis-branch-bound = { version = "0.1.0", path = "irdis-branch-bound", optional = true }
irdis-instance = { version = "0.1.0", path = "irdis-instance" }
irdis-vis = { version = "0.1.0", path = "irdis-vis", optional = true }

[features]
default = ["branch-bound", "vis", "furini", "xlsx"]
branch-bound = ["dep:irdis-branch-bound"]
vis = ["dep:irdis-vis"]
furini = ["irdis-instance/furini"]
xlsx = ["irdis-instance/xlsx"]

[dev-dependencies]
rust_xlsxwriter = { version = "0.63.0", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
svg = "0.15.0"
toml = "0.8.10"

[workspace]
members = ["irdis-branch-bound", "irdis-instance", "irdis-vis"]
