[package]
name = "irdis"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg", "docsrs"]

[dependencies]
irdis-branch-bound = { version = "0.1.0", path = "irdis-branch-bound", optional = true }
irdis-data = { version = "0.1.0", path = "irdis-data", optional = true }
irdis-instance = { version = "0.1.0", path = "irdis-instance" }
irdis-vis = { version = "0.1.0", path = "irdis-vis", optional = true }

[features]
default = ["branch-bound", "data", "furini", "heathrow", "xlsx", "vis"]
branch-bound = ["dep:irdis-branch-bound"]
data = ["dep:irdis-data"]
furini = ["irdis-data?/furini"]
heathrow = ["irdis-data?/heathrow"]
xlsx = ["irdis-data?/xlsx"]
vis = ["dep:irdis-vis"]

[dev-dependencies]
divan = "0.1.14"
rust_xlsxwriter = { version = "0.63.0", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
svg = "0.15.0"
toml = "0.8.10"

[workspace]
members = ["irdis-branch-bound", "irdis-data", "irdis-instance", "irdis-vis"]

[[bench]]
name = "branch_bound"
harness = false
