[package]
name = "runseq"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg", "docsrs"]

[dependencies]
runseq-branch-bound = { version = "0.1.0", path = "runseq-branch-bound", optional = true }
runseq-data = { version = "0.1.0", path = "runseq-data", optional = true }
runseq-instance = { version = "0.1.0", path = "runseq-instance" }
runseq-vis = { version = "0.1.0", path = "runseq-vis", optional = true }

[dev-dependencies]
criterion = "0.5.1"
csv = "1.3.0"
rust_xlsxwriter = { version = "0.63.0", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
svg = "0.15.0"
toml = "0.8.10"

[features]
default = ["branch-bound", "data", "furini", "heathrow", "vis", "xlsx"] # TODO: Remove default features after testing
branch-bound = ["dep:runseq-branch-bound"]
data = ["dep:runseq-data"]
furini = ["runseq-data?/furini"]
heathrow = ["runseq-data?/heathrow"]
vis = ["dep:runseq-vis"]
xlsx = ["runseq-data?/xlsx"]

[workspace]
members = ["runseq-branch-bound", "runseq-data", "runseq-instance", "runseq-vis"]

[[bench]]
name = "branch_bound"
harness = false
