[package]
name = "irdis-core"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg", "docsrs"]

[dependencies]
chrono = { version = "0.4.31", default-features = false, features = [
    "std",
    "serde",
] }
csv = "1.3.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_with = "3.4.0"
thiserror = "1.0.56"
