[package]
name = "irdis-vis"
version = "0.1.0"
edition = "2021"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--generate-link-to-definition", "--cfg", "docsrs"]

[dependencies]
chrono = { version = "0.4.31", default-features = false }
irdis-core = { version = "0.1.0", path = "../irdis-core" }
svg = "0.15.0"
